# shuleyangu-api

./: .env  .gitignore  Cargo.toml  openapi.json
migrations/2022-12-27-175429_create_users/: up.sql
migrations/2022-12-29-131851_create_states/: up.sql
migrations/2022-12-29-145434_add_github_id_to_users/: up.sql
migrations/2022-12-30-172353_add_email_verification_to_user/: down.sql  up.sql
migrations/2022-12-31-124623_create_verification_codes/: down.sql  up.sql
migrations/2022-12-31-154149_create_session/: down.sql  up.sql
src/: main.rs  schema.rs
src/database/: mod.rs
src/emails/: code.tmpl
src/health/: status.rs
src/mail/: mail.rs  mod.rs
src/models/: ids.rs  mod.rs  session.rs  states.rs  user.rs  verification_codes.rs
src/routes/: auth.rs  devices.rs  health.rs  mod.rs  profile.rs
src/utils/: auth.rs  env.rs  mod.rs  validate.rs
