[package]
name = "shuleyangu-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15"
r2d2 = "0.8.10"
dotenv = "0.15.0"

url = "2.3.1"
urlencoding = "2.1.2"

thiserror = "1.0.37"
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
rust-argon2 = "1.0"
validator = { version = "0.16.0", features = ["derive", "phone"] }