[package]
edition = "2021"
name = "shuleyangu-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = {version = "1.0", features = ["derive"]}
# serde_json is just for the example, not required in general
diesel = {version = "2.0.0", features = ["postgres", "r2d2", "chrono"]}
dotenv = "0.15.0"
dotenvy = "0.15"
r2d2 = "0.8.10"
serde_json = "1.0"

url = "2.3.1"
urlencoding = "2.1.2"

actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
chrono = {version = "0.4.23", features = ["serde"]}
lettre = {version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "builder"]}
rand = "0.8.4"
reqwest = {version = "0.11.12", features = ["json", "multipart"]}
rust-argon2 = "1.0"
thiserror = "1.0.37"
tokio = {version = "1", features = ["full"]}
validator = {version = "0.16.0", features = ["derive", "phone"]}
futures = "0.3.25"
env_logger = "0.10.0"